; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/arm/mach-ixp2000/extr_pci.c_ixp2000_pci_write_config.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/arm/mach-ixp2000/extr_pci.c_ixp2000_pci_write_config.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pci_bus = type { i32 }

@bytemask = common dso_local global i32* null, align 8
@PCIBIOS_DEVICE_NOT_FOUND = common dso_local global i32 0, align 4
@PCIBIOS_SUCCESSFUL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ixp2000_pci_write_config(%struct.pci_bus* %0, i32 %1, i32 %2, i32 %3, i32 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca %struct.pci_bus*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32*, align 8
  %14 = alloca i32, align 4
  store %struct.pci_bus* %0, %struct.pci_bus** %7, align 8
  store i32 %1, i32* %8, align 4
  store i32 %2, i32* %9, align 4
  store i32 %3, i32* %10, align 4
  store i32 %4, i32* %11, align 4
  %15 = load i32*, i32** @bytemask, align 8
  %16 = load i32, i32* %10, align 4
  %17 = sext i32 %16 to i64
  %18 = getelementptr inbounds i32, i32* %15, i64 %17
  %19 = load i32, i32* %18, align 4
  %20 = load i32, i32* %9, align 4
  %21 = srem i32 %20, 4
  %22 = mul nsw i32 %21, 8
  %23 = shl i32 %19, %22
  %24 = xor i32 %23, -1
  store i32 %24, i32* %12, align 4
  %25 = load %struct.pci_bus*, %struct.pci_bus** %7, align 8
  %26 = getelementptr inbounds %struct.pci_bus, %struct.pci_bus* %25, i32 0, i32 0
  %27 = load i32, i32* %26, align 4
  %28 = load i32, i32* %8, align 4
  %29 = load i32, i32* %9, align 4
  %30 = call i32* @ixp2000_pci_config_addr(i32 %27, i32 %28, i32 %29)
  store i32* %30, i32** %13, align 8
  %31 = load i32*, i32** %13, align 8
  %32 = icmp ne i32* %31, null
  br i1 %32, label %35, label %33

33:                                               ; preds = %5
  %34 = load i32, i32* @PCIBIOS_DEVICE_NOT_FOUND, align 4
  store i32 %34, i32* %6, align 4
  br label %50

35:                                               ; preds = %5
  %36 = load i32, i32* %11, align 4
  %37 = load i32, i32* %9, align 4
  %38 = srem i32 %37, 4
  %39 = mul nsw i32 %38, 8
  %40 = shl i32 %36, %39
  store i32 %40, i32* %14, align 4
  %41 = load i32*, i32** %13, align 8
  %42 = load i32, i32* %41, align 4
  %43 = load i32, i32* %12, align 4
  %44 = and i32 %42, %43
  %45 = load i32, i32* %14, align 4
  %46 = or i32 %44, %45
  %47 = load i32*, i32** %13, align 8
  store i32 %46, i32* %47, align 4
  %48 = call i32 (...) @clear_master_aborts()
  %49 = load i32, i32* @PCIBIOS_SUCCESSFUL, align 4
  store i32 %49, i32* %6, align 4
  br label %50

50:                                               ; preds = %35, %33
  %51 = load i32, i32* %6, align 4
  ret i32 %51
}

declare dso_local i32* @ixp2000_pci_config_addr(i32, i32, i32) #1

declare dso_local i32 @clear_master_aborts(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
